# yazi-pick

./: LICENSE  README.ja.md  README.md  yazi-pick
helper/: Cargo.toml
helper/.cargo/: config.toml
helper/src/: main.rs
